--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,18 +50,14 @@ dependencies {
   compile 'com.jakewharton:butterknife:8.4.0'
   apt 'com.jakewharton:butterknife-compiler:8.4.0'
   compile 'io.reactivex:rxandroid:1.2.1'
-
   compile 'com.jakewharton.timber:timber:4.3.1'
-
   compile 'io.janusproject.guava:guava:19.0.0'
   compile 'com.google.code.gson:gson:2.7'
-
   compile 'com.github.lzyzsd:circleprogress:1.1.0'
   compile 'com.github.rey5137:material:1.2.2'
-
   compile 'com.squareup.retrofit2:retrofit:2.1.0'
   compile 'com.squareup.okhttp3:okhttp:3.4.1'
   compile 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
-
   compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+  compile 'io.reactivex:rxjava-joins:0.22.0'
 }
